<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControlMain" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/redSliderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redSlider_label" />

        <SeekBar
            android:id="@+id/redSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0" />

        <TextView
            android:id="@+id/greenSliderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/greenSlider_label" />

        <SeekBar
            android:id="@+id/greenSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:max="255"
            android:progress="0" />

        <TextView
            android:id="@+id/blueSliderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/blueSlider_label" />

        <SeekBar
            android:id="@+id/blueSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0" />

        <TextView
            android:id="@+id/whiteSliderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/whiteSlider_label" />

        <SeekBar
            android:id="@+id/whiteSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="0" />

        <FrameLayout
            android:id="@+id/transTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tTime_text" />

            <EditText
                android:id="@+id/transTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:ems="10"
                android:inputType="number" />
        </FrameLayout>

        <Spinner
            android:id="@+id/transitionSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:entries="@array/TransitionNames" />

        <FrameLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/whiteButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/whiteButton_text" />

            <Button
                android:id="@+id/onButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/onButton_text" />

            <Button
                android:id="@+id/offButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:minWidth="64dip"
                android:text="@string/offButton_text" />

            <Button
                android:id="@+id/refreshButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:text="@string/refreshButton_text" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>